[project]
name = "paper-reviewer"
version = "0.1.0"
description = "Draft of a paper reviewer tool using LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "mcp>=1.26.0",
    "pymupdf>=1.27.2.2",
]
